added test cases for api class and binding class