@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>4.48</version>
-        <relativePath />
-    </parent>
-    <groupId>org.conjur.jenkins</groupId>
-    <artifactId>conjur-credentials</artifactId>
-    <packaging>hpi</packaging>
-    <properties>
-        <jenkins.version>2.346.3</jenkins.version>   
-	    <java.level>11</java.level>
-        <!-- <hpi.compatibleSinceVersion>2.0.0</hpi.compatibleSinceVersion> -->
-    </properties>
-    <name>Conjur Secrets Plugin</name>
-    <description>Plugin to retrieve secrets from CyberArk/Conjur</description>
-    <version>1.0.16-SNAPSHOT</version>
-    <url>https://github.com/jenkinsci/conjur-credentials-plugin</url>
-    
-    <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>https://opensource.org/licenses/MIT</url>
-        </license>
-    </licenses>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jenkins-ci.plugins</groupId>
+		<artifactId>plugin</artifactId>
+		<version>4.48</version>
+		<relativePath />
+	</parent>
+	<groupId>org.conjur.jenkins</groupId>
+	<artifactId>conjur-credentials</artifactId>
+	<packaging>hpi</packaging>
+	<properties>
+		<jenkins.version>2.346.3</jenkins.version>
+		<java.level>11</java.level>
 
-    <!-- If you want this to appear on the wiki page:
+	</properties>
+	<name>Conjur Secrets Plugin</name>
+	<description>Plugin to retrieve secrets from CyberArk/Conjur</description>
+	<version>1.0.16-SNAPSHOT</version>
+	<url>https://github.com/jenkinsci/conjur-credentials-plugin</url>
+
+	<!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+
+	<!-- If you want this to appear on the wiki page:
     <developers>
       <developer>
         <id>bhacker</id>
@@ -37,106 +37,201 @@
       </developer>
     </developers> -->
 
-    <!-- <url>https://wiki.jenkins.io/display/JENKINS/TODO+Plugin</url> -->
-    <scm>
-        <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-      <tag>conjur-credentials-1.0.13</tag>
-  </scm>
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
-    <dependencies>
-	    <dependency>
-	      <groupId>org.jenkins-ci.plugins</groupId>
-	      <artifactId>cloudbees-folder</artifactId>
-	    </dependency>    
+	<!-- <url>https://wiki.jenkins.io/display/JENKINS/TODO+Plugin</url> -->
+	<scm>
+		<connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+		<developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+		<url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+		<tag>conjur-credentials-1.0.16-SNAPSHOt</tag>
+	</scm>
+	<repositories>
+		<repository>
+			<id>repo.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/public/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>repo.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/public/</url>
+		</pluginRepository>
+	</pluginRepositories>
+	<dependencies>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>cloudbees-folder</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/credentials -->
 		<dependency>
-		    <groupId>org.jenkins-ci.plugins</groupId>
-		    <artifactId>credentials</artifactId>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>credentials</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/credentials-binding -->
 		<dependency>
-		    <groupId>org.jenkins-ci.plugins</groupId>
-		    <artifactId>credentials-binding</artifactId>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>credentials-binding</artifactId>
 		</dependency>
-        <!-- https://mvnrepository.com/artifact/org.jenkins-ci.modules/instance-identity -->
-        <dependency>
-            <groupId>org.jenkins-ci.modules</groupId>
-            <artifactId>instance-identity</artifactId>
-            <version>2.2</version>
-        </dependency>
-	<dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-common</artifactId>
-            <version>1.6.20</version>
-         </dependency>   
+		<!-- https://mvnrepository.com/artifact/org.jenkins-ci.modules/instance-identity -->
+		<dependency>
+			<groupId>org.jenkins-ci.modules</groupId>
+			<artifactId>instance-identity</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-common</artifactId>
+			<version>1.6.20</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
 		<dependency>
-		    <groupId>com.squareup.okhttp3</groupId>
-		    <artifactId>okhttp</artifactId>
-		    <version>4.10.0</version>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.10.0</version>
 		</dependency>
-	
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-        <!-- <dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<!-- <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency> -->
-<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.14.0</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.0</version>
 		</dependency>
 
 
-        <!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/jackson2-api -->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>jackson2-api</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.bitbucket.b_c/jose4j -->
-        <dependency>
-            <groupId>org.bitbucket.b_c</groupId>
-            <artifactId>jose4j</artifactId>
-            <version>0.7.9</version>
-        </dependency>
-<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/jackson2-api -->
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>jackson2-api</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.bitbucket.b_c/jose4j -->
+		<dependency>
+			<groupId>org.bitbucket.b_c</groupId>
+			<artifactId>jose4j</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-basic-steps</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-cps</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-durable-task-step</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-job</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit5 -->
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.8.0</version> <!-- or higher, correspondning to powermock-version -->
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.0-beta.5</version> <!-- or higher -->
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>2.0.0-beta.5</version> <!-- or higher -->
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-reflect</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+
+		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.24.1-GA</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.15.0</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.4</version>
+		</dependency>
+<!-- https://mvnrepository.com/artifact/org.powermock/powermock-classloading-xstream -->
+<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
 <dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.8.9</version>
+    <groupId>com.thoughtworks.xstream</groupId>
+    <artifactId>xstream</artifactId>
+    <version>1.4.20</version>
 </dependency>
-    </dependencies>
-    <dependencyManagement>
-        <dependencies>
-        <dependency>
-            <groupId>io.jenkins.tools.bom</groupId>
-            <artifactId>bom-2.332.x</artifactId>
-            <version>1678.vc1feb_6a_3c0f1</version>
-            <scope>import</scope>
-            <type>pom</type>
-        </dependency>
-        </dependencies>
-    </dependencyManagement>
-    <profiles>
-    <profile>
-      <id>jdk-9-and-above</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-    </profile>
-</profiles>
-  </project>
+
+
+	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.jenkins.tools.bom</groupId>
+				<artifactId>bom-2.332.x</artifactId>
+				<version>1678.vc1feb_6a_3c0f1</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<build>
+	<plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<configuration>
+			<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+		</configuration>
+	</plugin>
+	</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>jdk-9-and-above</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+		</profile>
+	</profiles>
+</project>
